--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -1,115 +1,102 @@
+ <footer>
+     <div id="sofooter" class="container">
 
- <footer id="footer" class="container-fluid" style="margin-top: 0px;">
-    <div id="sofooter" class="container">
+         <div id="sofooterLogo">
+             <a href="https://sogilis.fr/index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
+         </div>
 
-        <div id="sofooterLogo">
-            <a href="https://sogilis.fr/index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
-        </div>
+         <div id="sofooterContactgrid">
 
-        <div id="sofooterContactgrid">
+             <h1 id="sofooterContactgridTitle" class="title_level_1">Contact</h1>
 
-            <h1 id="sofooterContactgridTitle" class="title_level_1">Contact</h1>
+             <p id="sofooterContactgridContactus">
+                 <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
+                     {{ i18n "contactUs" }}
+                     <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
+                         <style type="text/css">
+                             .st0 {
+                                 fill: none;
+                                 stroke-width: 3;
+                             }
+                         </style>
+                         <path id="Tracé_16" class="st0" d="M1.2,9.2l4.1-4.1L1.1,1.2" />
+                     </svg>
+                 </a>
+             </p>
 
-            <p id="sofooterContactgridContactus">
-                <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
-                    {{ i18n "contactUs" }}
-                    <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
-                    <style type="text/css">
-                        .st0{fill:none;stroke-width:3;}
-                    </style>
-                    <path id="Tracé_16" class="st0" d="M1.2,9.2l4.1-4.1L1.1,1.2"/>
-                    </svg>
-                </a>
-            </p>
-
-            <div id="sofooterContactgridSocialnetwork">
-                {{ with $.Site.Params.twitter }}
-                <a class="liens_sociaux twitter" href="{{ . }}">
-                    <svg version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;"
-                        xml:space="preserve">
-                    <defs>
-                    </defs>
-                    <path id="ico_twitter_1_" d="M27.1,2.6c-1,0.4-2.1,0.7-3.2,0.9c1.2-0.7,2-1.8,2.5-3.1c-1.1,0.6-2.3,1.1-3.5,1.4
+             <div id="sofooterContactgridSocialnetwork">
+                 {{ with $.Site.Params.twitter }}
+                 <a href="{{ . }}">
+                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="27.1px" height="22.1px" viewBox="0 0 27.1 22.1" style="enable-background:new 0 0 27.1 22.1;" xml:space="preserve">
+                         <defs>
+                         </defs>
+                         <path id="ico_twitter_1_" d="M27.1,2.6c-1,0.4-2.1,0.7-3.2,0.9c1.2-0.7,2-1.8,2.5-3.1c-1.1,0.6-2.3,1.1-3.5,1.4
                         c-2.1-2.2-5.6-2.4-7.9-0.3c-1.1,1.1-1.8,2.5-1.8,4.1c0,0.4,0,0.9,0.1,1.3C8.9,6.6,4.7,4.5,1.9,1C0.4,3.6,1.2,6.8,3.6,8.4
                         c-0.9,0-1.8-0.3-2.5-0.7v0.1c0,2.7,1.9,4.9,4.5,5.5c-0.5,0.1-1,0.2-1.5,0.2c-0.4,0-0.7,0-1-0.1c0.7,2.3,2.8,3.8,5.2,3.9
                         c-2,1.5-4.4,2.4-6.9,2.4c-0.4,0-0.9,0-1.3-0.1c2.5,1.6,5.5,2.5,8.5,2.5c8.7,0.1,15.8-6.9,15.8-15.6c0-0.1,0-0.1,0-0.2l0-0.7
-                        C25.5,4.7,26.4,3.7,27.1,2.6z"/>
-                    </svg>
-                </a>
-                {{ end }}
+                        C25.5,4.7,26.4,3.7,27.1,2.6z" />
+                     </svg>
+                 </a>
+                 {{ end }}
 
-                {{ if (and $.Site.Params.twitter $.Site.Params.linkedin) }}
-                <br>
-                {{ end }}
+                 {{ if (and $.Site.Params.twitter $.Site.Params.linkedin) }}
+                 <br>
+                 {{ end }}
 
-                {{ with $.Site.Params.linkedin }}
-                <a class="liens_sociaux" href="{{ . }}">
-                    <svg version="1.1"
-                        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                        x="0px" y="0px" width="25.2px" height="24px" viewBox="0 0 25.2 24" style="enable-background:new 0 0 25.2 24;"
-                        xml:space="preserve">
-                    <defs>
-                    </defs>
-                    <path id="ico_linkedin_1_" class="st0" d="M25.2,14.7V24h-5.4v-8.7c0-2.2-0.8-3.7-2.7-3.7c-1.2,0-2.4,0.8-2.8,2
+                 {{ with $.Site.Params.linkedin }}
+                 <a href="{{ . }}">
+                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25.2px" height="24px" viewBox="0 0 25.2 24" style="enable-background:new 0 0 25.2 24;" xml:space="preserve">
+                         <path id="ico_linkedin_1_" class="st0" d="M25.2,14.7V24h-5.4v-8.7c0-2.2-0.8-3.7-2.7-3.7c-1.2,0-2.4,0.8-2.8,2
                         c-0.1,0.4-0.2,0.9-0.2,1.3V24H8.7c0,0,0.1-14.7,0-16.2h5.4v2.3l0,0.1h0v-0.1c1-1.7,2.9-2.8,4.9-2.7C22.5,7.4,25.2,9.8,25.2,14.7z
                         M3.1,0C1.5-0.1,0.2,1,0,2.6s1,2.9,2.5,3.1c0.1,0,0.3,0,0.4,0h0c1.5,0.1,2.9-1,3.1-2.5S5.1,0.2,3.5,0C3.4,0,3.2,0,3.1,0z M0.3,24
-                        h5.4V7.8H0.3V24z"/>
-                    </svg>
-                </a>
-                {{ end }}
-            </div>
+                        h5.4V7.8H0.3V24z" />
+                     </svg>
+                 </a>
+                 {{ end }}
+             </div>
 
-            <div id="sofooterContactgridGrenoble" class="adresses">
-                <p class="title_name">Sogilis Grenoble</p>
-                <p class="text_description">
-                    4 Avenue Doyen Louis Weil<br>
-                    38000 Grenoble<br>
-                    04 26 78 05 07
-                </p>
-            </div>
+             <div id="sofooterContactgridGrenoble" class="adresses">
+                 <p class="title_name">Sogilis Grenoble</p>
+                 <p class="text_description">
+                     4 Avenue Doyen Louis Weil<br>
+                     38000 Grenoble<br>
+                     04 26 78 05 07
+                 </p>
+             </div>
 
-            <div id="sofooterContactgridLyon" class="adresses">
-                <p class="title_name">Sogilis Lyon</p>
-                <p class="text_description">
-                    45 Rue Sainte-Geneviève<br>
-                    69006 Lyon <br>
-                    07 68 25 60 95
-                </p>
-            </div>
-        </div>
+             <div id="sofooterContactgridLyon" class="adresses">
+                 <p class="title_name">Sogilis Lyon</p>
+                 <p class="text_description">
+                     45 Rue Sainte-Geneviève<br>
+                     69006 Lyon <br>
+                     07 68 25 60 95
+                 </p>
+             </div>
+         </div>
 
-        <div id="sofooterServices" class="liens_pages">
-            <h1 class="title_level_1">{{ i18n "services" }}</h1>
-            <ul>
-                <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
-                <li><a href="https://sogilis.fr/services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
-                <li><a href="https://sogilis.fr/services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
-            </ul>
-        </div>
+         <div id="sofooterServices" class="liens_pages">
+             <h1 class="title_level_1">{{ i18n "services" }}</h1>
+             <ul>
+                 <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
+                 <li><a href="https://sogilis.fr/services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
+                 <li><a href="https://sogilis.fr/services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
+             </ul>
+         </div>
 
-        <div id="sofooterCompany" class="liens_pages">
-            <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
-            <ul>
-                <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
-                <li><a href="https://sogilis.fr/emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
-                <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
-            </ul>
-        </div>
+         <div id="sofooterCompany" class="liens_pages">
+             <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
+             <ul>
+                 <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
+                 <li><a href="https://sogilis.fr/emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
+                 <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
+             </ul>
+         </div>
 
-        <div id="sofooterHr">
-            <div class="trait_gris_clair"></div>
-        </div>
+         <hr id="sofooterHr"/>
 
-        <div id="sofooterSubfooter" class="row subfooter  justify-content-between">
-            <div class="col-9 col-sm-8 col-md-4 col-lg-4">
-                <p class="text_description">{{ i18n "allRightsReserved" }}</p>
-            </div>
-            <div class="col-2 col-sm-3 col-md-2 col-lg-1">
-                <a href="">{{ i18n "LegalInfo" }}</a>
-            </div>
-        </div>
-    </div>
-</footer>
+         <div id="sofooterSubfooter" class="row subfooter  justify-content-between">
+             <p>{{ i18n "allRightsReserved" }}</p>
+             <a href="">{{ i18n "LegalInfo" }}</a>
+         </div>
+     </div>
+ </footer>
