--- a/site/themes/sogilis/layouts/partials/footer.html
+++ b/site/themes/sogilis/layouts/partials/footer.html
@@ -1,5 +1,5 @@
  <footer>
-     <div id="sofooter" class="container">
+     <div id="sofooter" class="mainColumn">
 
          <div id="sofooterLogo">
              <a href="https://sogilis.fr/index.html"><img alt="Logo Sogilis" src="{{ "images/logo_sogilis_alone.svg" | relURL }}"></a>
@@ -13,12 +13,6 @@
                  <a class="btn_dark_grey" href="https://sogilis.fr/contact.html">
                      {{ i18n "contactUs" }}
                      <svg version="1.1" id="Calque_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 7.5 10.3" style="enable-background:new 0 0 7.5 10.3;" xml:space="preserve">
-                         <style type="text/css">
-                             .st0 {
-                                 fill: none;
-                                 stroke-width: 3;
-                             }
-                         </style>
                          <path id="Tracé_16" class="st0" d="M1.2,9.2l4.1-4.1L1.1,1.2" />
                      </svg>
                  </a>
@@ -56,8 +50,8 @@
              </div>
 
              <div id="sofooterContactgridGrenoble" class="adresses">
-                 <p class="title_name">Sogilis Grenoble</p>
-                 <p class="text_description">
+                 <p>Sogilis Grenoble</p>
+                 <p>
                      4 Avenue Doyen Louis Weil<br>
                      38000 Grenoble<br>
                      04 26 78 05 07
@@ -65,8 +59,8 @@
              </div>
 
              <div id="sofooterContactgridLyon" class="adresses">
-                 <p class="title_name">Sogilis Lyon</p>
-                 <p class="text_description">
+                 <p>Sogilis Lyon</p>
+                 <p>
                      45 Rue Sainte-Geneviève<br>
                      69006 Lyon <br>
                      07 68 25 60 95
@@ -77,24 +71,24 @@
          <div id="sofooterServices" class="liens_pages">
              <h1 class="title_level_1">{{ i18n "services" }}</h1>
              <ul>
-                 <li><a href="https://sogilis.fr/services-applications-cloud-native.html" class="liens_text">{{i18n "cloudNativeApplications" }}</a></li>
-                 <li><a href="https://sogilis.fr/services-embarques-et-iot.html" class="liens_text">{{ i18n "embeddedSoftwares" }}</a></li>
-                 <li><a href="https://sogilis.fr/services-logiciels-critiques.html" class="liens_text">{{ i18n "criticalSoftwares" }}</a></li>
+                 <li><a href="https://sogilis.fr/services-applications-cloud-native.html">{{i18n "cloudNativeApplications" }}</a></li>
+                 <li><a href="https://sogilis.fr/services-embarques-et-iot.html">{{ i18n "embeddedSoftwares" }}</a></li>
+                 <li><a href="https://sogilis.fr/services-logiciels-critiques.html">{{ i18n "criticalSoftwares" }}</a></li>
              </ul>
          </div>
 
          <div id="sofooterCompany" class="liens_pages">
              <h1 class="title_level_1">{{ i18n "theCompany" }}</h1>
              <ul>
-                 <li><a href="https://sogilis.fr/vision.html" class="liens_text">{{ i18n "ourVision" }}</a></li>
-                 <li><a href="https://sogilis.fr/emplois.html" class="liens_text">{{ i18n "jobs" }}</a></li>
-                 <li><a href="" class="liens_text">{{ i18n "blog" }}</a></li>
+                 <li><a href="https://sogilis.fr/vision.html">{{ i18n "ourVision" }}</a></li>
+                 <li><a href="https://sogilis.fr/emplois.html">{{ i18n "jobs" }}</a></li>
+                 <li><a href="">{{ i18n "blog" }}</a></li>
              </ul>
          </div>
 
          <hr id="sofooterHr"/>
 
-         <div id="sofooterSubfooter" class="row subfooter  justify-content-between">
+         <div id="sofooterSubfooter">
              <p>{{ i18n "allRightsReserved" }}</p>
              <a href="">{{ i18n "LegalInfo" }}</a>
          </div>
