--- a/site/themes/sogilis/assets/css/header-sup768.css
+++ b/site/themes/sogilis/assets/css/header-sup768.css
@@ -1,52 +1,20 @@
 header {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    z-index: 200;
-    width: 100%;
     height: 5rem;
-    margin-top: 2rem;
-    box-sizing: border-box;
 }
-header > div.content-menu-mobile,
-header > div.content-menu-mobile_scroll {
+header > div#navBarMobile,
+header > div.navBarMobile_scroll {
     display: none;
-}
-
-/* When we scroll */
-header.content_header_scroll {
-    margin-top: 0px;
-    transition: all 0.5s;
-    box-shadow: 0px 0px 16px 3px rgba(0,0,0,0.15);
-    background-color:white;
-    padding: 1rem 2rem;
-}
-
-header > div.content_menu_desktop {
-    display: flex;
-    margin: 0;
-    padding: 0;
-    height: 100%;
-
-    /* The goal is to align the last child `nav a[href]`
-     * with the `<main>`.
-     * It's because this child has `padding-right: 1.5em`, and
-     * on hover of this link a bar is displayed on this padding-right
-     * TODO when we convert to scss, maybe replace `1.5` by a variable.
-     * or in CSS
-     */
-    margin-right: -1.5rem;
 }
 
 /* ========================================================================== */
 /* Logo sogilis on the left */
 /* ========================================================================== */
 
-header > div.content_menu_desktop > a#soheaderLogo {
+header > div#navBarDesktop > a#soheaderLogo {
     width: 15%;
 }
 
-header > div.content_menu_desktop > a > img {
+header > div#navBarDesktop > a > img {
     height: 100%;
 }
 
@@ -54,35 +22,36 @@ header > div.content_menu_desktop > a > img {
 /* Navigation links, on the right */
 /* ========================================================================== */
 
-header > div.content_menu_desktop >  nav {
-    flex: 1 1 0;
+header > div#navBarDesktop >  nav {
     display: flex;
-    justify-content: flex-end;
-    align-content: center;
     align-items: center;
     font-size: 0.9rem;
+
+    /* Needed, for alignment. As it, the last child is aligned */
+    /* See above, we have `padding-right: 1.5rem' */
+    margin-right: -1.5rem;
 }
 
-header > div.content_menu_desktop > nav a[href],
-header > div.content_menu_desktop > nav button {
+header > div#navBarDesktop > nav a[href],
+header > div#navBarDesktop > nav button {
     position: relative;
-    border: unset;
-    padding: 0;
-    /* TODO use a variable for 1.5 */
+
+    /* As it, on hoover, the small bar appears */
     padding-right: 1.5rem;
+
+    border: unset;
     background-color: transparent;
     font-family: 'Montserrat', sans-serif;
-    text-decoration: none;
     font-weight: 600;
     cursor: pointer;
 }
 
-header > div.content_menu_desktop > nav > a {
+header > div#navBarDesktop > nav > a {
     margin-left: 4rem;
 }
 
-header > div.content_menu_desktop > nav > a,
-header > div.content_menu_desktop > nav > div.dropdown > button {
+header > div#navBarDesktop > nav > a,
+header > div#navBarDesktop > nav > div.dropdown > button {
     /* TODO $wolf-blue when transform this file to SCSS */
     color: #016099;
 }
@@ -91,16 +60,16 @@ header > div.content_menu_desktop > nav > div.dropdown > button {
 /* ================================================= */
 
 /* We must have too:  */
-/* header > div.content_menu_desktop > nav a[href], */
-/* header > div.content_menu_desktop > nav button { */
+/* header > div#navBarDesktop > nav a[href], */
+/* header > div#navBarDesktop > nav button { */
 /* position: relative; */
 /* padding-right: 1.5rem; */
 /* } */
 /* A parent element should have a z-index heigher, otherwise not displayed */
 
 /* TODO should be factorize with footer.css */
-header > div.content_menu_desktop > nav a::after,
-header > div.content_menu_desktop > nav button::after {
+header > div#navBarDesktop > nav a::after,
+header > div#navBarDesktop > nav button::after {
     content: '';
     position: absolute;
     display: block;
@@ -121,24 +90,24 @@ header > div.content_menu_desktop > nav button::after {
     transition: width 0.3s;
 }
 
-header > div.content_menu_desktop > nav a:hover::after,
-header > div.content_menu_desktop > nav button:hover::after {
+header > div#navBarDesktop > nav a:hover::after,
+header > div#navBarDesktop > nav button:hover::after {
     width: 2.5rem;
 }
 
 /* Dropdown links (hidden by default) */
 /* ================================== */
 
-header > div.content_menu_desktop > nav > div.dropdown {
+header > div#navBarDesktop > nav > div.dropdown {
     height: 100%;
     display: flex;
 }
 
-header > div.content_menu_desktop > nav > div.dropdown > button {
+header > div#navBarDesktop > nav > div.dropdown > button {
     align-self: center;
 }
 
-header > div.content_menu_desktop > nav > div.dropdown > div.dropdown-content {
+header > div#navBarDesktop > nav > div.dropdown > div.dropdown-content {
     display: none;
     flex-direction: column;
     align-items: center;
@@ -161,7 +130,7 @@ header > div.content_menu_desktop > nav > div.dropdown > div.dropdown-content {
 }
 
 /* Show the dropdown menu on hover */
-header > div.content_menu_desktop > nav > div.dropdown:hover > div.dropdown-content {
+header > div#navBarDesktop > nav > div.dropdown:hover > div.dropdown-content {
     display: flex;
     visibility: visible;
     opacity: 1;
@@ -169,7 +138,7 @@ header > div.content_menu_desktop > nav > div.dropdown:hover > div.dropdown-cont
 }
 
 /* Links inside the dropdown */
-header > div.content_menu_desktop > nav > div.dropdown > div.dropdown-content > a {
+header > div#navBarDesktop > nav > div.dropdown > div.dropdown-content > a {
     color: black;
     margin: 1rem auto;
 }
